--- a/src/translations/zh-HK.json
+++ b/src/translations/zh-HK.json
@@ -36,6 +36,10 @@
 "footer.mailing_address": "通訊地址",
 "footer.phone": "電話",
 "footer.email": "電郵",
-"footer.clickMe": "點擊地圖打開Google Map"
+"footer.clickMe": "點擊地圖打開Google Map",
 
+"label.name":"貨品名稱: ",
+"label.description":"貨品描述:",
+"label.otherImgs":"有關貨品:",
+"label.backHomepage":"返回主頁"
 }
