--- a/src/translations/zh-HK.json
+++ b/src/translations/zh-HK.json
@@ -1,5 +1,5 @@
 {
-  "seo.title_long":"義記屯門康寶路",
+  "seo.title_long":"義記功能膠鐵桶",
   "seo.description":"義記膠鐵桶買賣 - 新界屯門康寶路88號前，請在英文字牌TREVI轉右，在意大利地基門口左邊鐵門",
   "website.name": "義記",
   "website.shortDescription": "香港專業回收化工桶，舊桶再處理多用途化",
