--- a/src/translations/zh-HK.json
+++ b/src/translations/zh-HK.json
@@ -37,10 +37,14 @@
 "footer.phone": "電話",
 "footer.email": "電郵",
 "footer.clickMe": "點擊地圖打開Google Map",
+"footer.wechat":"WeChat",
 
 "label.name":"貨品名稱: ",
 "label.description":"貨品描述:",
 "label.otherImgs":"有關貨品:",
 "label.backHomepage":"返回主頁",
-"label.askItem":"點擊我諮詢貨品"
+"label.askItem":"點擊我諮詢貨品",
+"label.clickCopy":"點擊複製",
+
+"alert.copyDone":"複製成功"
 }
