--- a/src/translations/zh-HK.json
+++ b/src/translations/zh-HK.json
@@ -41,7 +41,7 @@
 
 "label.name":"貨品名稱: ",
 "label.description":"貨品描述:",
-"label.otherImgs":"有關貨品:",
+"label.otherImgs":"有關貨品(點擊圖片打開詳細資料):",
 "label.backHomepage":"返回主頁",
 "label.askItem":"點擊我諮詢貨品",
 "label.clickCopy":"點擊複製",
