--- a/src/translations/zh-HK.json
+++ b/src/translations/zh-HK.json
@@ -8,6 +8,9 @@
  "menu.service": "貨品清單",
 "menu.contact_us": "聯絡我們",
 "menu.about_us": "關於我們",
+"menu.career": "香港桶的歷史",
+
+
 
 "homepage.service":"貨品清單",
 "homepage.service.shortDescription":"點擊圖片打開詳細資料",
