--- a/src/translations/zh-HK.json
+++ b/src/translations/zh-HK.json
@@ -40,6 +40,7 @@
 "footer.phone": "電話",
 "footer.email": "電郵",
 "footer.clickMe": "點擊地圖打開Google Map",
+"footer.whatsapp":"Whatsapp",
 "footer.wechat":"WeChat",
 
 "label.name":"貨品名稱: ",
